# rustberry-weather

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
.github/workflows/: rust.yml
migrations/2020-05-13-180203_create_values/: down.sql  up.sql
src/: lib.rs  main.rs  measure.rs  models.rs  schema.rs
static/css/: weather.css
static/vega-lite/: humidity.json  pressure.json  temperature.json  vlSpecs.json
templates/: index.html.tera
