[package]
name = "rustberry-weather"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
bme280 = "0.2.1"
linux-embedded-hal = "0.3.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
tera = "1.2.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["serve","json","tera_templates"]