[package]
name = "rustberry-weather"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
chrono_locale = "0.1.0"
bme280 = "0.2.1"
linux-embedded-hal = "0.3.0"
rand = "0.7.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
tera = "1.2.0"
clap = "2.33.0"
serde = { version = "1.0.110", features = ["derive"] }
diesel = { version = "1.4.6", features = ["postgres","numeric","extras"] }
dotenv = "0.15.0"
average = "0.10.4"

[dependencies.bigdecimal]
version = "0.0.15"
features = ["serde"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["serve","json","tera_templates"]